--- a/c2x/c2x.vcxproj
+++ b/c2x/c2x.vcxproj
@@ -111,6 +111,36 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="adat.h" />
+    <ClInclude Include="aref.h" />
+    <ClInclude Include="autogrow.h" />
+    <ClInclude Include="c2.h" />
+    <ClInclude Include="collection.h" />
+    <ClInclude Include="crt.h" />
+    <ClInclude Include="files.h" />
+    <ClInclude Include="io.h" />
+    <ClInclude Include="stringcreator.h" />
+    <ClInclude Include="win.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="collection.cpp" />
+    <ClCompile Include="compile.cpp" />
+    <ClCompile Include="crt.cpp" />
+    <ClCompile Include="crt_memory.cpp" />
+    <ClCompile Include="files.cpp" />
+    <ClCompile Include="io.cpp" />
+    <ClCompile Include="main.cpp" />
+    <ClCompile Include="messages.cpp" />
+    <ClCompile Include="scope_state.cpp" />
+    <ClCompile Include="status_state.cpp" />
+    <ClCompile Include="stringcreator.cpp" />
+    <ClCompile Include="symbol.cpp" />
+    <ClCompile Include="szdup.cpp" />
+    <ClCompile Include="win_console.cpp" />
+    <ClCompile Include="win_io_file.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="..\c2code\projects\anytest\main.c2" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
