--- a/c2x/c2x.vcxproj
+++ b/c2x/c2x.vcxproj
@@ -117,6 +117,7 @@
     <ClInclude Include="c2.h" />
     <ClInclude Include="collection.h" />
     <ClInclude Include="crt.h" />
+    <ClInclude Include="evalue.h" />
     <ClInclude Include="files.h" />
     <ClInclude Include="io.h" />
     <ClInclude Include="stringcreator.h" />
@@ -127,11 +128,15 @@
     <ClCompile Include="compile.cpp" />
     <ClCompile Include="crt.cpp" />
     <ClCompile Include="crt_memory.cpp" />
+    <ClCompile Include="evalue.cpp" />
+    <ClCompile Include="evalue_plugin.cpp" />
     <ClCompile Include="files.cpp" />
+    <ClCompile Include="genstate.cpp" />
     <ClCompile Include="io.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="messages.cpp" />
     <ClCompile Include="scope_state.cpp" />
+    <ClCompile Include="segment.cpp" />
     <ClCompile Include="status_state.cpp" />
     <ClCompile Include="stringcreator.cpp" />
     <ClCompile Include="symbol.cpp" />
