--- a/c2x/c2x.vcxproj.filters
+++ b/c2x/c2x.vcxproj.filters
@@ -72,19 +72,16 @@
     <ClCompile Include="io.cpp">
       <Filter>Поддержка</Filter>
     </ClCompile>
-    <ClCompile Include="status_state.cpp">
-      <Filter>Компилятор</Filter>
-    </ClCompile>
     <ClCompile Include="evalue.cpp">
       <Filter>Компилятор</Filter>
     </ClCompile>
     <ClCompile Include="evalue_plugin.cpp">
       <Filter>Компилятор</Filter>
     </ClCompile>
-    <ClCompile Include="genstate.cpp">
+    <ClCompile Include="section.cpp">
       <Filter>Компилятор</Filter>
     </ClCompile>
-    <ClCompile Include="section.cpp">
+    <ClCompile Include="gen_state.cpp">
       <Filter>Компилятор</Filter>
     </ClCompile>
   </ItemGroup>
@@ -107,6 +104,12 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="..\c2code\projects\anytest\main.c2">
+      <Filter>Пример</Filter>
+    </None>
+    <None Include="..\c2code\library\geo\point.c2">
+      <Filter>Пример</Filter>
+    </None>
+    <None Include="..\c2code\projects\anytest\test1.c2">
       <Filter>Пример</Filter>
     </None>
   </ItemGroup>
