--- a/c2x/c2x.vcxproj
+++ b/c2x/c2x.vcxproj
@@ -69,7 +69,9 @@
     <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
-  <PropertyGroup />
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
+    <IncludePath />
+  </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
@@ -131,8 +133,9 @@
     <ClCompile Include="evalue.cpp" />
     <ClCompile Include="evalue_plugin.cpp" />
     <ClCompile Include="files.cpp" />
-    <ClCompile Include="gen_state.cpp" />
+    <ClCompile Include="genstate.cpp" />
     <ClCompile Include="io.cpp" />
+    <ClCompile Include="linker.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="messages.cpp" />
     <ClCompile Include="section.cpp" />
@@ -144,6 +147,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="..\c2code\library\geo\point.c2" />
+    <None Include="..\c2code\library\geo\rect.c2" />
     <None Include="..\c2code\projects\anytest\main.c2" />
     <None Include="..\c2code\projects\anytest\test1.c2" />
   </ItemGroup>
